# rusty-chip8

./: Cargo.toml
src/: main.rs
