[package]
name = "rusty-chip8"
version = "0.1.0"
authors = ["Christian Engen <chris.a.engen@gmail.com>"]
edition = "2021"


[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"

[dependencies]
getrandom = {version = "0.2.8", features = ["js"] }
macroquad = "0.3.25"
